# algoai

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
include/constraints/: csp_binary_problem.h  csp_problem.h  csp_solver.h
include/constraints/utils/: csp_constraint.h  csp_domain.h  csp_variable.h
src/: algo.cpp
tests/: CMakeLists.txt  test_constraints.cpp  test_sudoku_backtracking.cpp
